// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho auto_bottom (Hộp đáy dán) 1`] = `
[
  "M 0,9 L 15,0 L 29.595,-40 L 55,-40 L 95,0 L 97.354,-59.751 C 97.378,-60.37 97.825,-60.8 98.445,-60.8 L 137.195,-60.8 L 154.875,-43.12 L 154.875,-40 L 173.678,-40 L 204.126,-60.8 L 211.514,-60.8 C 212.117,-60.8 212.606,-60.311 212.606,-59.708 L 212.606,-10.92 L 206.398,-7.28 L 213.678,0 L 215,0 L 229.595,-40 L 255,-40 L 295,0 L 297.359,-59.751 C 297.383,-60.371 297.83,-60.8 298.45,-60.8 L 337.32,-60.8 L 355,-43.12 L 355,-40 L 375,-40 L 405.646,-60.8 L 413.034,-60.8 C 413.637,-60.8 414.126,-60.311 414.126,-59.708 L 414.126,-10.92 L 407.72,-7.28 L 415,0 L 415,180 L 362.5,180",
  "M 15,0 L 15,180",
  "M 15,180 L 0,171 L 0,9",
  "M 95,0 L 95,180.5 L 215,180.5",
  "M 95,180 L 15,180",
  "M 215,0 L 215,180.5",
  "M 295,0 L 295,180 L 215,180",
  "M 347.5,180 L 295,180",
  "M 15,180 L 15,185.9 L 17.8,188.7 L 24.346,234.433 C 24.769,237.388 26.628,239 29.613,239 L 87,239 L 91,184 L 95.073,179.927 C 95.108,179.892 95.25,179.95 95.25,180 L 95.25,259.5 L 101.5,259.5 C 101.776,259.5 102,259.224 102,259 L 102,257.5",
  "M 214.927,179.927 L 219,184 L 223,239 L 280.387,239 C 283.372,239 285.231,237.388 285.654,234.433 L 292.2,188.7 L 295,185.9 L 295,180",
  "M 102,258.5 L 208,258.5",
  "M 214.75,259.5 L 208.5,259.5 C 208.224,259.5 208,259.224 208,259 L 208,257.5",
  "M 214.75,259.5 L 214.75,180",
  "M 214.927,179.927 C 214.892,179.892 214.75,179.95 214.75,180",
  "M 95.75,259.5 L 95.75,271.5 C 95.75,273.157 97.093,274.5 98.75,274.5 L 211.25,274.5 C 212.907,274.5 214.25,273.157 214.25,271.5 L 214.25,259.5",
  "M 347.5,180 L 362.5,180 L 347.5,180 Z",
  "M 347.5,180 L 347.5,198 C 347.5,199.105 348.395,200 349.5,200 L 360.5,200 C 361.605,200 362.5,199.105 362.5,198 L 362.5,180",
  "M 147,259.5 L 163,259.5 L 164,257.5",
  "M 147,259.5 L 146,257.5",
  "M 213.678,0 L 173.678,-40",
  "M 415,0 L 375,-40",
  "M 15,0 L 213.678,0",
  "M 215,0 L 415,0",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho cup_sleeve (Bọc ly) 1`] = `
[
  "M -125.02668792018984,709.0615821687898 C -42.31355434482377,723.64613927707 42.31355434482377,723.64613927707 125.02668792018984,709.0615821687898 L 138.9305633270383,701.5328207387248 L 125.03870911368388,622.7482004977481 L 109.39835193016611,620.428884397691 C 37.024360051720805,633.1903718674363 -37.024360051720805,633.1903718674363 -109.39835193016611,620.428884397691 L -125.02668792018984,709.0615821687898 Z",
  "M 109.39835193016611,620.428884397691 L 125.02668792018984,709.0615821687898",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho double_tray (Hộp âm dương) 1`] = `
[
  "M 0,0 L 361,0 L 361,261 L 0,261 L 0,0 Z",
  "M 0,261 L 0,313 L 5,318 L 1,319 L -48,319 L -48,368.5 L 1,368.5 L 5,368.5 L 20,383.5 L 341,383.5",
  "M 361,261 L 361,313 L 356,318 L 360,319 L 409,319 L 409,368.5 L 360,368.5 L 356,368.5 L 341,383.5",
  "M 0,313 L 361,313",
  "M 5,318 L 356,318",
  "M 5,368.5 L 356,368.5",
  "M 1,319 L 1,368.5",
  "M 360,319 L 360,368.5",
  "M 0,0 L 0,-52 L 5,-57 L 1,-58 L -48,-58 L -48,-107.5 L 1,-107.5 L 5,-107.5 L 20,-122.5 L 341,-122.5",
  "M 361,0 L 361,-52 L 356,-57 L 360,-58 L 409,-58 L 409,-107.5 L 360,-107.5 L 356,-107.5 L 341,-122.5",
  "M 0,-52 L 361,-52",
  "M 5,-57 L 356,-57",
  "M 5,-107.5 L 356,-107.5",
  "M 1,-58 L 1,-107.5",
  "M 360,-58 L 360,-107.5",
  "M 413,0 L 413,261",
  "M 413,0 L 418,5 L 468.5,5 L 483.5,20 L 483.5,241",
  "M 413,261 L 418,256 L 468.5,256 L 483.5,241",
  "M 418,5 L 418,256",
  "M 468.5,5 L 468.5,256",
  "M 361,261 C 361,260.448 361.448,260 362,260 C 362.552,260 363,260.448 363,261 L 364,262 L 364,313 L 411.5,313 L 411.5,260 L 413,261",
  "M 362,260 L 411.5,260",
  "M 361,0 C 361,0.552 361.448,1 362,1 C 362.552,1 363,0.552 363,0 L 364,-1 L 364,-52 L 411.5,-52 L 411.5,1 L 413,0",
  "M 362,1 L 411.5,1",
  "M -52,0 L -52,261",
  "M -52,0 L -57,5 L -107.5,5 L -122.5,20 L -122.5,241",
  "M -52,261 L -57,256 L -107.5,256 L -122.5,241",
  "M -57,5 L -57,256",
  "M -107.5,5 L -107.5,256",
  "M 0,261 C 0,260.448 -0.448,260 -1,260 C -1.552,260 -2,260.448 -2,261 L -3,262 L -3,313 L -50.5,313 L -50.5,260 L -52,261",
  "M -1,260 L -50.5,260",
  "M 0,0 C 0,0.552 -0.448,1 -1,1 C -1.552,1 -2,0.552 -2,0 L -3,-1 L -3,-52 L -50.5,-52 L -50.5,1 L -52,0",
  "M -1,1 L -50.5,1",
  "M 672,-7 L 1047,-7 L 1047,268 L 672,268 L 672,-7 Z",
  "M 672,268 L 672,323 L 677,328 L 673,329 L 621,329 L 621,381.5 L 673,381.5 L 677,381.5 L 692,396.5 L 1027,396.5",
  "M 1047,268 L 1047,323 L 1042,328 L 1046,329 L 1098,329 L 1098,381.5 L 1046,381.5 L 1042,381.5 L 1027,396.5",
  "M 672,323 L 1047,323",
  "M 677,328 L 1042,328",
  "M 677,381.5 L 1042,381.5",
  "M 673,329 L 673,381.5",
  "M 1046,329 L 1046,381.5",
  "M 672,-7 L 672,-62 L 677,-67 L 673,-68 L 621,-68 L 621,-120.5 L 673,-120.5 L 677,-120.5 L 692,-135.5 L 1027,-135.5",
  "M 1047,-7 L 1047,-62 L 1042,-67 L 1046,-68 L 1098,-68 L 1098,-120.5 L 1046,-120.5 L 1042,-120.5 L 1027,-135.5",
  "M 672,-62 L 1047,-62",
  "M 677,-67 L 1042,-67",
  "M 677,-120.5 L 1042,-120.5",
  "M 673,-68 L 673,-120.5",
  "M 1046,-68 L 1046,-120.5",
  "M 1102,-7 L 1102,268",
  "M 1102,-7 L 1107,-2 L 1160.5,-2 L 1175.5,13 L 1175.5,248",
  "M 1102,268 L 1107,263 L 1160.5,263 L 1175.5,248",
  "M 1107,-2 L 1107,263",
  "M 1160.5,-2 L 1160.5,263",
  "M 1047,268 C 1047,267.448 1047.448,267 1048,267 C 1048.552,267 1049,267.448 1049,268 L 1050,269 L 1050,323 L 1100.5,323 L 1100.5,267 L 1102,268",
  "M 1048,267 L 1100.5,267",
  "M 1047,-7 C 1047,-6.448 1047.448,-6 1048,-6 C 1048.552,-6 1049,-6.448 1049,-7 L 1050,-8 L 1050,-62 L 1100.5,-62 L 1100.5,-6 L 1102,-7",
  "M 1048,-6 L 1100.5,-6",
  "M 617,-7 L 617,268",
  "M 617,-7 L 612,-2 L 558.5,-2 L 543.5,13 L 543.5,248",
  "M 617,268 L 612,263 L 558.5,263 L 543.5,248",
  "M 612,-2 L 612,263",
  "M 558.5,-2 L 558.5,263",
  "M 672,268 C 672,267.448 671.552,267 671,267 C 670.448,267 670,267.448 670,268 L 669,269 L 669,323 L 618.5,323 L 618.5,267 L 617,268",
  "M 671,267 L 618.5,267",
  "M 672,-7 C 672,-6.448 671.552,-6 671,-6 C 670.448,-6 670,-6.448 670,-7 L 669,-8 L 669,-62 L 618.5,-62 L 618.5,-6 L 617,-7",
  "M 671,-6 L 618.5,-6",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho envelope (Bì thư DL) 1`] = `
[
  "M 0,110 L 1,108.268 L 1,7.5 C 1,6.119 2.119,5 3.5,5 L 216.5,5 C 217.881,5 219,6.119 219,7.5 L 219,108.268 L 220,110 L 233.2,117.92 L 233.2,212.08 L 220,220",
  "M 220,110 L 0,110 L 220,110 L 220,220 L 0,220 L 0,110 L 0,220",
  "M 100,50 C 100,36.667 120,36.667 120,50",
  "M -13.2,117.92 L 0,110",
  "M 0,220 L -13.2,212.08 L -13.2,117.92",
  "M 220,220 L 220,110",
  "M 0,220 L 4.353,244.689 C 4.674,246.51 6.416,248.318 8.224,248.708 L 107,270 C 109.1,270.6 110.9,270.6 113,270 L 211.776,248.708 C 213.584,248.318 215.326,246.51 215.647,244.689 L 220,220",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho gable (Gable Box) 1`] = `
[
  "M 0,9 L 15,0 L 15.25,-74.25 L 60.25,-74.25 C 62.735,-74.25 64.75,-72.235 64.75,-69.75 L 59.75,-47.25 L 105.078,0.344 C 105.112,0.38 105.25,0.325 105.25,0.275 L 105.25,-67.5 L 150.5,-67.5 C 152.985,-67.5 155,-65.485 155,-63 L 152,-45 L 208,-45 L 205,-63 C 205,-65.485 207.015,-67.5 209.5,-67.5 L 254.75,-67.5 L 254.75,0.275 C 254.75,0.325 254.888,0.38 254.922,0.344",
  "M 15,0 L 15,220",
  "M 15,220 L 0,211 L 0,9",
  "M 105,0 L 105,220 L 15,220",
  "M 255,0 L 255,220",
  "M 105,220 L 255,220",
  "M 345,0 L 345,220 L 255,220",
  "M 495,0 L 495,220",
  "M 495,220 L 345,220",
  "M 15,0 L 495,0",
  "M 105,220 L 117.5,271.962 L 105,303.379 C 105,307.982 108.731,311.713 113.334,311.713 L 122.392,311.713 C 126.995,311.713 130.726,307.982 130.726,303.379 L 137.188,318.728 L 222.812,318.728 L 229.274,303.379 C 229.274,307.982 233.005,311.713 237.608,311.713 L 246.666,311.713 C 251.269,311.713 255,307.982 255,303.379 L 242.5,271.962 L 255,220 L 287.716,291.777 C 294.5,306.662 305.5,306.662 312.284,291.777 L 345,220 L 357.5,271.962 L 345,303.379 C 345,307.982 348.731,311.713 353.334,311.713 L 362.392,311.713 C 366.995,311.713 370.726,307.982 370.726,303.379 L 377.188,318.728 L 462.812,318.728 L 469.274,303.379 C 469.274,307.982 473.005,311.713 477.608,311.713 L 486.666,311.713 C 491.269,311.713 495,307.982 495,303.379 L 482.5,271.962 L 495,220",
  "M 117.5,271.962 L 242.5,271.962",
  "M 150,271.962 L 150,285.992 C 150,291.158 154.187,295.345 159.353,295.345 L 200.647,295.345 C 205.813,295.345 210,291.158 210,285.992 L 210,271.962 L 150,271.962 Z",
  "M 357.5,271.962 L 482.5,271.962",
  "M 390,271.962 L 390,285.992 C 390,291.158 394.187,295.345 399.353,295.345 L 440.647,295.345 C 445.813,295.345 450,291.158 450,285.992 L 450,271.962 L 390,271.962 Z",
  "M 15,220 L 47.716,291.777 C 54.5,306.662 65.5,306.662 72.284,291.777 L 105,220",
  "M 58.5,248.832 L 58.5,279.645 C 58.5,280.473 59.172,281.145 60,281.145 C 60.828,281.145 61.5,280.473 61.5,279.645 L 61.5,248.832 L 58.5,248.832 Z",
  "M 298.5,248.832 L 298.5,279.645 C 298.5,280.473 299.172,281.145 300,281.145 C 300.828,281.145 301.5,280.473 301.5,279.645 L 301.5,248.832 L 298.5,248.832 Z",
  "M 344.931,0.306 L 392.25,-45 L 392.25,-63 C 392.25,-65.485 394.265,-67.5 396.75,-67.5 L 443.25,-67.5 C 445.735,-67.5 447.75,-65.485 447.75,-63 L 447.75,-45 L 495,0",
  "M 344.75,0.229 L 344.75,-74.25 L 299.75,-74.25 C 297.265,-74.25 295.25,-72.235 295.25,-69.75 L 300.25,-47.25 L 254.922,0.344",
  "M 344.75,0.229 C 344.75,0.279 344.895,0.341 344.931,0.306",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho hanging_window (Hộp treo có cửa sổ) 1`] = `
[
  "M 0,9 L 15,0 L 16.5,-1.5 L 18,-29.5 L 39.583,-29.5 C 40.734,-29.5 41.305,-28.986 41.426,-27.842 L 43.95,-4 L 45,-2.95 L 45,0 L 125,0 L 125,-2.95 L 126.05,-4 L 128.574,-27.842 C 128.695,-28.986 129.267,-29.5 130.417,-29.5 L 152,-29.5 L 153.5,-1.5 L 155.073,0.073 C 155.108,0.108 155.25,0.05 155.25,0 L 155.25,-29.5 L 161.5,-29.5 C 161.776,-29.5 162,-29.224 162,-29 L 162,-27.5",
  "M 15,0 L 15,140",
  "M 15,140 L 0,131 L 0,9",
  "M 15,0 L 45,0 L 45,140.5 L 125,140.5",
  "M 45,140 L 15,140",
  "M 125,0 L 125,140.5",
  "M 125,0 L 155,0",
  "M 155,-0.5 L 155,140 L 125,140",
  "M 155,-0.5 L 235,-0.5",
  "M 235,0 L 235,140",
  "M 235,140 L 155,140",
  "M 15,140 L 15,142.95 L 16.05,144 L 18.574,167.842 C 18.696,168.986 19.266,169.5 20.417,169.5 L 42,169.5 L 43.5,141.5 L 45.073,139.927 C 45.108,139.892 45.25,139.95 45.25,140 L 45.25,169.5 L 51.5,169.5 C 51.776,169.5 52,169.224 52,169 L 52,167.5",
  "M 124.927,139.927 L 126.5,141.5 L 128,169.5 L 149.583,169.5 C 150.734,169.5 151.305,168.986 151.426,167.842 L 153.95,144 L 155,142.95 L 155,140 L 155.25,140 L 155.25,163.903 C 155.25,169.479 159.771,174 165.347,174 C 165.899,174 166.347,174.448 166.347,175 C 166.347,175.552 165.899,176 165.347,176 C 159.771,176 155.25,180.521 155.25,186.097 L 155.25,210.5 L 155.75,210.5 L 155.75,222.5 C 155.75,224.157 157.093,225.5 158.75,225.5 L 231.25,225.5 C 232.907,225.5 234.25,224.157 234.25,222.5 L 234.25,210.5 L 234.75,210.5 L 234.75,186.097 C 234.75,180.521 230.229,176 224.653,176 C 224.101,176 223.653,175.552 223.653,175 C 223.653,174.448 224.101,174 224.653,174 C 230.229,174 234.75,169.479 234.75,163.903 L 234.75,140 L 235,140",
  "M 69,35 L 101,35 C 103.209,35 105,36.791 105,39 L 105,101 C 105,103.209 103.209,105 101,105 L 69,105 C 66.791,105 65,103.209 65,101 L 65,39 C 65,36.791 66.791,35 69,35 Z",
  "M 52,168.5 L 118,168.5",
  "M 124.75,169.5 L 118.5,169.5 C 118.224,169.5 118,169.224 118,169 L 118,167.5",
  "M 124.75,169.5 L 124.75,140",
  "M 124.927,139.927 C 124.892,139.892 124.75,139.95 124.75,140",
  "M 162,-28.5 L 228,-28.5",
  "M 234.75,-29.5 L 228.5,-29.5 C 228.224,-29.5 228,-29.224 228,-29 L 228,-27.5",
  "M 234.75,-29.5 L 234.75,0 L 235,0",
  "M 45.75,169.5 L 45.75,181.5 C 45.75,183.157 47.093,184.5 48.75,184.5 L 121.25,184.5 C 122.907,184.5 124.25,183.157 124.25,181.5 L 124.25,169.5",
  "M 155.75,-29.5 L 155.75,-41.5 C 155.75,-43.157 157.093,-44.5 158.75,-44.5 L 231.25,-44.5 C 232.907,-44.5 234.25,-43.157 234.25,-41.5 L 234.25,-29.5",
  "M 166.347,175 L 223.653,175",
  "M 184,156.25 L 206,156.25 C 207.657,156.25 209,157.593 209,159.25 C 209,160.907 207.657,162.25 206,162.25 L 198,162.25 C 198,163.907 196.657,165.25 195,165.25 C 193.343,165.25 192,163.907 192,162.25 L 184,162.25 C 182.343,162.25 181,160.907 181,159.25 C 181,157.593 182.343,156.25 184,156.25 Z",
  "M 155.75,210.5 L 234.25,210.5",
  "M 184,193.75 L 206,193.75 C 207.657,193.75 209,192.407 209,190.75 C 209,189.093 207.657,187.75 206,187.75 L 198,187.75 C 198,186.093 196.657,184.75 195,184.75 C 193.343,184.75 192,186.093 192,187.75 L 184,187.75 C 182.343,187.75 181,189.093 181,190.75 C 181,192.407 182.343,193.75 184,193.75 Z",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho paper_bag (Túi giấy SOS) 1`] = `
[
  "M 0,9 L 0,341 L 15,350 L 575,350",
  "M 15,0 L 0,9",
  "M 15,0 L 15,350",
  "M 0,335 L 15,335",
  "M 0,85 L 15,85 L 115,85 L 115,335 L 15,335",
  "M 115,85 L 295,85 L 295,335 L 115,335 L 115,350",
  "M 295,85 L 395,85 L 395,335 L 295,335 L 295,350",
  "M 395,85 L 575,85 L 490,0",
  "M 575,85 L 575,335 L 575,350",
  "M 575,335 L 395,335 L 395,350",
  "M 0,335 L 575,335",
  "M 0,85 L 575,85",
  "M 15,0 L 575,0",
  "M 575,85 L 575,0",
  "M 115,85 L 115,0",
  "M 295,85 L 295,0",
  "M 395,85 L 395,0",
  "M 65,350 L 65,0",
  "M 65,135 L 0,70",
  "M 65,135 L 200,0",
  "M 345,350 L 345,0",
  "M 345,135 L 210,0",
  "M 345,135 L 480,0",
  "M 65,135 L 0,135",
  "M 345,135 L 575,135",
  "M 176,310 L 175.952,310.488 L 175.81,310.957 L 175.579,311.389 L 175.268,311.768 L 174.889,312.079 L 174.457,312.31 L 173.988,312.452 L 173.5,312.5 L 173.012,312.452 L 172.543,312.31 L 172.111,312.079 L 171.732,311.768 L 171.421,311.389 L 171.19,310.957 L 171.048,310.488 L 171,310 L 171.048,309.512 L 171.19,309.043 L 171.421,308.611 L 171.732,308.232 L 172.111,307.921 L 172.543,307.69 L 173.012,307.548 L 173.5,307.5 L 173.988,307.548 L 174.457,307.69 L 174.889,307.921 L 175.268,308.232 L 175.579,308.611 L 175.81,309.043 L 175.952,309.512 L 176,310 Z",
  "M 239,310 L 238.952,310.488 L 238.81,310.957 L 238.579,311.389 L 238.268,311.768 L 237.889,312.079 L 237.457,312.31 L 236.988,312.452 L 236.5,312.5 L 236.012,312.452 L 235.543,312.31 L 235.111,312.079 L 234.732,311.768 L 234.421,311.389 L 234.19,310.957 L 234.048,310.488 L 234,310 L 234.048,309.512 L 234.19,309.043 L 234.421,308.611 L 234.732,308.232 L 235.111,307.921 L 235.543,307.69 L 236.012,307.548 L 236.5,307.5 L 236.988,307.548 L 237.457,307.69 L 237.889,307.921 L 238.268,308.232 L 238.579,308.611 L 238.81,309.043 L 238.952,309.512 L 239,310 Z",
  "M 456,310 L 455.952,310.488 L 455.81,310.957 L 455.579,311.389 L 455.268,311.768 L 454.889,312.079 L 454.457,312.31 L 453.988,312.452 L 453.5,312.5 L 453.012,312.452 L 452.543,312.31 L 452.111,312.079 L 451.732,311.768 L 451.421,311.389 L 451.19,310.957 L 451.048,310.488 L 451,310 L 451.048,309.512 L 451.19,309.043 L 451.421,308.611 L 451.732,308.232 L 452.111,307.921 L 452.543,307.69 L 453.012,307.548 L 453.5,307.5 L 453.988,307.548 L 454.457,307.69 L 454.889,307.921 L 455.268,308.232 L 455.579,308.611 L 455.81,309.043 L 455.952,309.512 L 456,310 Z",
  "M 519,310 L 518.952,310.488 L 518.81,310.957 L 518.579,311.389 L 518.268,311.768 L 517.889,312.079 L 517.457,312.31 L 516.988,312.452 L 516.5,312.5 L 516.012,312.452 L 515.543,312.31 L 515.111,312.079 L 514.732,311.768 L 514.421,311.389 L 514.19,310.957 L 514.048,310.488 L 514,310 L 514.048,309.512 L 514.19,309.043 L 514.421,308.611 L 514.732,308.232 L 515.111,307.921 L 515.543,307.69 L 516.012,307.548 L 516.5,307.5 L 516.988,307.548 L 517.457,307.69 L 517.889,307.921 L 518.268,308.232 L 518.579,308.611 L 518.81,309.043 L 518.952,309.512 L 519,310 Z",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho pizza (Pizza Box FEFCO 0426) 1`] = `
[
  "M 0,0 L 300,0 L 300,300 L 0,300 L 0,0 Z",
  "M 1,45.45 C 1,45.201 1.201,45 1.45,45 L 2.05,45 C 2.299,45 2.5,45.201 2.5,45.45 L 2.5,89.55 C 2.5,89.799 2.299,90 2.05,90 L 1.45,90 C 1.201,90 1,89.799 1,89.55 L 1,45.45 Z",
  "M 1,210.45 C 1,210.201 1.201,210 1.45,210 L 2.05,210 C 2.299,210 2.5,210.201 2.5,210.45 L 2.5,254.55 C 2.5,254.799 2.299,255 2.05,255 L 1.45,255 C 1.201,255 1,254.799 1,254.55 L 1,210.45 Z",
  "M 297.5,45.45 C 297.5,45.201 297.701,45 297.95,45 L 298.55,45 C 298.799,45 299,45.201 299,45.45 L 299,89.55 C 299,89.799 298.799,90 298.55,90 L 297.95,90 C 297.701,90 297.5,89.799 297.5,89.55 L 297.5,45.45 Z",
  "M 297.5,210.45 C 297.5,210.201 297.701,210 297.95,210 L 298.55,210 C 298.799,210 299,210.201 299,210.45 L 299,254.55 C 299,254.799 298.799,255 298.55,255 L 297.95,255 C 297.701,255 297.5,254.799 297.5,254.55 L 297.5,210.45 Z",
  "M 0.5,0 L 0.5,-40",
  "M 1.914,-40 L 298.086,-40",
  "M 299.5,-40 L 299.5,0",
  "M 120,-1.55 L 180,-1.55 L 180,-0.05 L 120,-0.05 L 120,-1.55 Z",
  "M 0.5,300 L 0.5,340 L 299.5,340 L 299.5,300",
  "M 1,340 L 1,640 L 299,640 L 299,340 L 299,640 L 299,679.5",
  "M 78.5,490 C 78.5,491.657 77.157,493 75.5,493 C 73.843,493 72.5,491.657 72.5,490 C 72.5,488.343 73.843,487 75.5,487 C 77.157,487 78.5,488.343 78.5,490 Z",
  "M 153,490 C 153,491.657 151.657,493 150,493 C 148.343,493 147,491.657 147,490 C 147,488.343 148.343,487 150,487 C 151.657,487 153,488.343 153,490 Z",
  "M 227.5,490 C 227.5,491.657 226.157,493 224.5,493 C 222.843,493 221.5,491.657 221.5,490 C 221.5,488.343 222.843,487 224.5,487 C 226.157,487 227.5,488.343 227.5,490 Z",
  "M 1,679.5 L 0.5,680 L 120,680 L 120,696 L 180,696 L 180,680 L 299.5,680 L 299,679.5 C 308.484,679.5 317.652,676.088 324.828,669.886 C 332.003,663.685 336.708,655.109 338.083,645.725 C 338.525,642.707 336.186,640 333.136,640 L 299,640",
  "M 120,680 L 180,680",
  "M 1,640 L 1,679.5",
  "M 1,679.5 C -8.484,679.5 -17.652,676.088 -24.828,669.886 C -32.003,663.685 -36.708,655.109 -38.083,645.725 C -38.525,642.707 -36.186,640 -33.136,640 L 1,640",
  "M -0.5,-39 L -1.5,-38 L -39.5,-36 L -39.5,-4 L -1.5,-2 L -0.5,-1 C 0.4,-0.1 0.359,0 -0.914,0 L -40,0 L -41,0.5 L -80.5,0.5 L -80.5,45 L -82,43 L -82,92 L -80.5,90 L -80.5,210 L -82,208 L -82,257 L -80.5,255 L -80.5,299.5 L -41,299.5 L -40,300 L -0.914,300 C 0.359,300 0.4,300.1 -0.5,301 L -1.5,302 L -39.5,304 L -39.5,336 L -1,338 L 0.646,339.646 C 0.965,339.965 0.951,340.01 0.51,340.098 L -35.784,347.357 C -38.259,347.852 -39,348.755 -39,351.279 L -39,628.721 C -39,631.245 -38.259,632.148 -35.784,632.643 L -1,638 L 1,640",
  "M 300.5,-39 L 301.5,-38 L 339.5,-36 L 339.5,-4 L 301.5,-2 L 300.5,-1 C 299.6,-0.1 299.641,0 300.914,0 L 340,0 L 341,0.5 L 380.5,0.5 L 380.5,45 L 382,43 L 382,92 L 380.5,90 L 380.5,210 L 382,208 L 382,257 L 380.5,255 L 380.5,299.5 L 341,299.5 L 340,300 L 300.914,300 C 299.641,300 299.6,300.1 300.5,301 L 301.5,302 L 339.5,304 L 339.5,336 L 301,338 L 299.354,339.646 C 299.035,339.965 299.049,340.01 299.49,340.098 L 335.784,347.357 C 338.259,347.852 339,348.755 339,351.279 L 339,628.721 C 339,631.245 338.259,632.148 335.784,632.643 L 301,638 L 299,640",
  "M 1,340 L 1,640",
  "M -40,0 L -40,300",
  "M -41,0.5 L -41,299.5",
  "M 340,0 L 340,300",
  "M 341,0.5 L 341,299.5",
  "M -0.5,-39 C 0.4,-39.9 0.641,-40 1.914,-40",
  "M 300.5,-39 C 299.6,-39.9 299.359,-40 298.086,-40",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho rte (Reverse Tuck End) 1`] = `
[
  "M 0,9 L 15,0 L 18,-3 L 21,-49 L 64.09,-49 C 66.354,-49 67.647,-47.862 67.935,-45.617 L 72.9,-7 L 75,-4.9 L 75,0 L 175,0 L 175,-4.9 L 177.1,-7 L 182.065,-45.617 C 182.353,-47.862 183.647,-49 185.91,-49 L 229,-49 L 232,-3 L 235.073,0.073 C 235.108,0.108 235.25,0.05 235.25,0 L 235.25,-59.5 L 241.5,-59.5 C 241.776,-59.5 242,-59.224 242,-59 L 242,-57.5",
  "M 15,0 L 15,200",
  "M 15,200 L 0,191 L 0,9",
  "M 15,0 L 75,0 L 75,200.5 L 175,200.5",
  "M 75,200 L 15,200",
  "M 175,0 L 175,200.5",
  "M 175,0 L 235,0",
  "M 235,-0.5 L 235,200 L 175,200",
  "M 235,-0.5 L 335,-0.5",
  "M 335,0 L 335,200 L 235,200",
  "M 15,200 L 15,204.9 L 17.1,207 L 22.065,245.617 C 22.353,247.863 23.647,249 25.91,249 L 69,249 L 72,203 L 75.073,199.927 C 75.108,199.892 75.25,199.95 75.25,200 L 75.25,259.5 L 81.5,259.5 C 81.776,259.5 82,259.224 82,259 L 82,257.5",
  "M 174.927,199.927 L 178,203 L 181,249 L 224.09,249 C 226.354,249 227.647,247.863 227.935,245.617 L 232.9,207 L 235,204.9 L 235,200",
  "M 82,258.5 L 168,258.5",
  "M 174.75,259.5 L 168.5,259.5 C 168.224,259.5 168,259.224 168,259 L 168,257.5",
  "M 174.75,259.5 L 174.75,200",
  "M 174.927,199.927 C 174.892,199.892 174.75,199.95 174.75,200",
  "M 242,-58.5 L 328,-58.5",
  "M 334.75,-59.5 L 328.5,-59.5 C 328.224,-59.5 328,-59.224 328,-59 L 328,-57.5",
  "M 334.75,-59.5 L 334.75,0 L 335,0",
  "M 75.75,259.5 L 75.75,271.5 C 75.75,273.157 77.093,274.5 78.75,274.5 L 171.25,274.5 C 172.907,274.5 174.25,273.157 174.25,271.5 L 174.25,259.5",
  "M 235.75,-59.5 L 235.75,-71.5 C 235.75,-73.157 237.093,-74.5 238.75,-74.5 L 331.25,-74.5 C 332.907,-74.5 334.25,-73.157 334.25,-71.5 L 334.25,-59.5",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho slb (Snap-Lock Bottom) 1`] = `
[
  "M 0,9 L 15,0 L 15.25,-60 L 55.75,-60 C 57.959,-60 59.75,-58.209 59.75,-56 L 54.75,-38.875 L 95.071,0.312 C 95.107,0.347 95.25,0.286 95.25,0.236 L 95.25,-60 L 132.625,-60 C 134.834,-60 136.625,-58.209 136.625,-56 L 133.625,-40 L 176.375,-40 L 173.375,-56 C 173.375,-58.209 175.166,-60 177.375,-60 L 214.75,-60 L 214.75,0.236 C 214.75,0.286 214.893,0.347 214.929,0.312",
  "M 15,0 L 15,180",
  "M 15,180 L 0,171 L 0,9",
  "M 95,0 L 95,180.5 L 215,180.5",
  "M 95,180 L 15,180",
  "M 215,0 L 215,180.5",
  "M 295,0 L 295,180 L 215,180",
  "M 415,0 L 415,180 L 362.5,180",
  "M 347.5,180 L 295,180",
  "M 15,0 L 415,0",
  "M 15,180 L 15,185.9 L 17.8,188.7 L 24.346,234.433 C 24.769,237.388 26.628,239 29.613,239 L 87,239 L 91,184 L 95.073,179.927 C 95.108,179.892 95.25,179.95 95.25,180 L 95.25,259.5 L 101.5,259.5 C 101.776,259.5 102,259.224 102,259 L 102,257.5",
  "M 214.927,179.927 L 219,184 L 223,239 L 280.387,239 C 283.372,239 285.231,237.388 285.654,234.433 L 292.2,188.7 L 295,185.9 L 295,180",
  "M 102,258.5 L 208,258.5",
  "M 214.75,259.5 L 208.5,259.5 C 208.224,259.5 208,259.224 208,259 L 208,257.5",
  "M 214.75,259.5 L 214.75,180",
  "M 214.927,179.927 C 214.892,179.892 214.75,179.95 214.75,180",
  "M 95.75,259.5 L 95.75,271.5 C 95.75,273.157 97.093,274.5 98.75,274.5 L 211.25,274.5 C 212.907,274.5 214.25,273.157 214.25,271.5 L 214.25,259.5",
  "M 347.5,180 L 362.5,180 L 347.5,180 Z",
  "M 347.5,180 L 347.5,198 C 347.5,199.105 348.395,200 349.5,200 L 360.5,200 C 361.605,200 362.5,199.105 362.5,198 L 362.5,180",
  "M 147,259.5 L 163,259.5 L 164,257.5",
  "M 147,259.5 L 146,257.5",
  "M 294.924,0.338 L 333.875,-40 L 333.875,-56 C 333.875,-58.209 335.666,-60 337.875,-60 L 372.125,-60 C 374.334,-60 376.125,-58.209 376.125,-56 L 376.125,-40 L 415,0",
  "M 294.75,0.268 L 294.75,-60 L 254.25,-60 C 252.041,-60 250.25,-58.209 250.25,-56 L 255.25,-38.875 L 214.929,0.312",
  "M 294.75,0.268 C 294.75,0.318 294.889,0.374 294.924,0.338",
]
`;

exports[`golden-master: ổn định chuỗi SVG (Shared_Geometry_Module) > giữ char-identical chuỗi SVG cho tray (Hộp diêm / Khay) 1`] = `
[
  "M 0,0 L 100,0 L 100,60 L 0,60 L 0,0 L 0.5,0 L 0.5,-29.5 L 99.5,-29.5 L 99.5,0 L 100,0",
  "M 0,60 L 0.5,60 L 0.5,89.5 L 99.5,89.5 L 99.5,60 L 100,60 L 129,60",
  "M 0.5,89.5 C 0.5,97.784 7.216,104.5 15.5,104.5 L 15.5,105.5 L 14.5,105.5",
  "M 15.5,104.5 L 84.5,104.5 L 84.5,133.5",
  "M 84.5,104.5 C 92.784,104.5 99.5,97.784 99.5,89.5",
  "M 15.5,133.5 L 16,133.5 L 16,145.5 C 16,147.157 17.343,148.5 19,148.5 L 81,148.5 C 82.657,148.5 84,147.157 84,145.5 L 84,133.5 L 84.5,133.5",
  "M 16,133.5 L 84,133.5",
  "M 0.5,-29.5 C 0.5,-37.784 7.216,-44.5 15.5,-44.5 L 15.5,-45.5 L 14.5,-45.5",
  "M 15.5,-44.5 L 84.5,-44.5 L 84.5,-73.5",
  "M 84.5,-44.5 C 92.784,-44.5 99.5,-37.784 99.5,-29.5",
  "M 15.5,-73.5 L 16,-73.5 L 16,-85.5 C 16,-87.157 17.343,-88.5 19,-88.5 L 81,-88.5 C 82.657,-88.5 84,-87.157 84,-85.5 L 84,-73.5 L 84.5,-73.5",
  "M 16,-73.5 L 84,-73.5",
  "M 129,60 L 130,60 C 138.284,60 145,53.284 145,45 L 174.5,45 L 186.5,45 C 188.157,45 189.5,43.657 189.5,42 L 189.5,18 C 189.5,16.343 188.157,15 186.5,15 L 174.5,15 L 145,15 C 145,6.716 138.284,0 130,0 L 129,0",
  "M 130,60 L 130,0",
  "M 129,0 L 100,0",
  "M 145,45 L 145,15",
  "M 174.5,45 L 174.5,15",
  "M 0,60 L -29,60",
  "M -29,60 L -30,60 C -38.284,60 -45,53.284 -45,45 L -74.5,45 L -86.5,45 C -88.157,45 -89.5,43.657 -89.5,42 L -89.5,18 C -89.5,16.343 -88.157,15 -86.5,15 L -74.5,15 L -45,15 C -45,6.716 -38.284,0 -30,0 L -29,0",
  "M -30,60 L -30,0",
  "M -29,0 L 0,0",
  "M -45,45 L -45,15",
  "M -74.5,45 L -74.5,15",
  "M 0.5,60 L -6.453,66.953",
  "M -6.453,66.953 L -20.36,80.86",
  "M -20.36,80.86 L 0.5,89.5",
  "M -20.36,80.86 L -29,60",
  "M 99.5,60 L 106.453,66.953",
  "M 106.453,66.953 L 120.36,80.86",
  "M 120.36,80.86 L 99.5,89.5",
  "M 120.36,80.86 L 129,60",
  "M 0.5,0 L -6.453,-6.953",
  "M -6.453,-6.953 L -20.36,-20.86",
  "M -20.36,-20.86 L 0.5,-29.5",
  "M -20.36,-20.86 L -29,0",
  "M 99.5,0 L 106.453,-6.953",
  "M 106.453,-6.953 L 120.36,-20.86",
  "M 120.36,-20.86 L 99.5,-29.5",
  "M 120.36,-20.86 L 129,0",
  "M 15.5,104.5 L 15.5,133.5",
  "M 14.5,132.5 L 15.5,133.5",
  "M 14.5,132.5 L 1.5,132.5 L 1.5,119.8 C 1.5,119.358 1.142,119 0.7,119 L 0.3,119 C -0.142,119 -0.5,119.358 -0.5,119.8 L -0.5,132.5 L -11.5,132.5 C -13.157,132.5 -14.5,131.157 -14.5,129.5 L -14.5,108.5 C -14.5,106.843 -13.157,105.5 -11.5,105.5 L 14.5,105.5",
  "M 84.5,104.5 L 84.5,105.5 L 85.5,105.5",
  "M 85.5,132.5 L 84.5,133.5",
  "M 85.5,132.5 L 98.5,132.5 L 98.5,119.8 C 98.5,119.358 98.858,119 99.3,119 L 99.7,119 C 100.142,119 100.5,119.358 100.5,119.8 L 100.5,132.5 L 111.5,132.5 C 113.157,132.5 114.5,131.157 114.5,129.5 L 114.5,108.5 C 114.5,106.843 113.157,105.5 111.5,105.5 L 85.5,105.5",
  "M 15.5,-44.5 L 15.5,-73.5",
  "M 14.5,-72.5 L 15.5,-73.5",
  "M 14.5,-72.5 L -11.5,-72.5 C -13.157,-72.5 -14.5,-71.157 -14.5,-69.5 L -14.5,-48.5 C -14.5,-46.843 -13.157,-45.5 -11.5,-45.5 L -0.5,-45.5 L -0.5,-58.2 C -0.5,-58.642 -0.142,-59 0.3,-59 L 0.7,-59 C 1.142,-59 1.5,-58.642 1.5,-58.2 L 1.5,-45.5 L 14.5,-45.5",
  "M 84.5,-44.5 L 84.5,-45.5 L 85.5,-45.5",
  "M 85.5,-72.5 L 84.5,-73.5",
  "M 85.5,-72.5 L 111.5,-72.5 C 113.157,-72.5 114.5,-71.157 114.5,-69.5 L 114.5,-48.5 C 114.5,-46.843 113.157,-45.5 111.5,-45.5 L 100.5,-45.5 L 100.5,-58.2 C 100.5,-58.642 100.142,-59 99.7,-59 L 99.3,-59 C 98.858,-59 98.5,-58.642 98.5,-58.2 L 98.5,-45.5 L 85.5,-45.5",
  "M 254,-15.5 L 346,-15.5 L 350.5,-0.5",
  "M 350.5,-0.5 L 249.5,-0.5",
  "M 249.5,-0.5 L 254,-15.5",
  "M 249.5,-0.5 L 249.5,60.5 L 249.5,91.5 L 249.5,152.5 L 249.5,183.5 L 350.5,183.5 L 350.5,152.5 L 350.5,91.5 L 350.5,60.5 L 350.5,-0.5",
  "M 249.5,60.5 L 350.5,60.5 L 249.5,60.5 Z",
  "M 350.5,-0.5 L 249.5,-0.5",
  "M 249.5,91.5 L 350.5,91.5 L 249.5,91.5 Z",
  "M 249.5,152.5 L 350.5,152.5 L 249.5,152.5 Z",
]
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho auto_bottom (Hộp đáy dán) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho cup_sleeve (Bọc ly) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho double_tray (Hộp âm dương) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho envelope (Bì thư DL) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho gable (Gable Box) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho hanging_window (Hộp treo có cửa sổ) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho paper_bag (Túi giấy SOS) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho pizza (Pizza Box FEFCO 0426) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho rte (Reverse Tuck End) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho slb (Snap-Lock Bottom) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;

exports[`golden-master: ổn định giá trị kích thước (computeEnvelopeDims ≤ 0.001mm) > giữ FH/SF ổn định trong 0.001mm cho tray (Hộp diêm / Khay) 1`] = `
{
  "FH": 50,
  "SF": 13,
}
`;
